--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,10 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_">Main_Activity</string>
+    <string name="title_activity_google_maps">Map</string>
+    <string name="normal_map">normalna mapa</string>
+    <string name="hybrid_map">hybrydowa mapa</string>
+    <string name="satellite_map">mapa satelitarna</string>
+    <string name="terrain_map">mapa terenu</string>
+    <string name="dropped_pin">Wybrane miejsce</string>
 </resources>
