--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,6 @@
     <string name="app_name">NotifyMe</string>
     <string name="title_activity_notify_editor_">NotifyEditor_Activity</string>
 
-    <!-- Error strings -->
-    <string name="geofence_not_available">Geofence service is not available now</string>
-    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
-    <string name="geofence_too_many_pending_intents">
-        You have provided too many PendingIntents to the addGeofences() call
-    </string>
-    <string name="unknown_geofence_error">
-        Unknown error: the Geofence service is not available now
-    </string>
-    <string name="geofence_transition_invalid_type">
-        Geofence transition error: invalid transition type %1$d
-    </string>
-
     <!-- Transition type strings -->
     <string name="transition_entered">Jesteś w</string>
     <string name="transition_exited">Exited</string>
@@ -24,12 +11,31 @@
     <string name="permission_denied_explanation">Permission was denied, but is needed for core
         functionality.</string>
     <string name="settings">Settings</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_main_">Main_Activity</string>
-    <string name="title_activity_google_maps">Map</string>
+    <string name="back">BACK</string>
+    <string name="create">Create</string>
+    <string name="set_name_to_your_notify">Set name to your Notify:</string>
+    <string name="alarm_should_be">Alarm should be:</string>
+    <string name="alarm">aLARM</string>
+    <string name="name">Name</string>
+    <string name="set_description_to_your_notify">Set description to your notify:</string>
+    <string name="set_notify_message">Set Notify message:</string>
+    <string name="notify_me_one_many_times">Notify me One/Many times</string>
+    <string name="wifi_changes">Wifi Changes:</string>
+    <string name="wifi_should_be">Wifi should be:</string>
+    <string name="bluetooth_changes">Bluetooth Changes</string>
+    <string name="bluetooth_should_be">Bluetooth should be:</string>
+    <string name="phone_data">Phone data:</string>
+    <string name="notify_options_click_if_you_want_to_apply_it">Notify options (Click if you want to apply it):</string>
+    <string name="volume_changes">VOLUME CHANGES</string>
+    <string name="phone_data_should_be">Phone data should be:</string>
+    <string name="plane_mode">Plane mode</string>
+    <string name="plane_mode_should_be">Plane mode should be:</string>
     <string name="normal_map">normalna mapa</string>
     <string name="hybrid_map">hybrydowa mapa</string>
     <string name="satellite_map">mapa satelitarna</string>
     <string name="terrain_map">mapa terenu</string>
-    <string name="dropped_pin">Wybrane miejsce</string>
+    <string name="action_settings">Edytuj</string>
+    <string name="dropped_pin">wybrane miejsce</string>
+    <string name="title_activity_google_maps">Map</string>
+
 </resources>
